fixed header logo growing too large

--- a/css/superseded css/style copy.css
+++ b/css/superseded css/style copy.css
@@ -124,13 +124,6 @@ body {
     font-family: var(--font-primary);
     color: var(--colour-primary);
     text-align: center;
-
-    /* Set core body defaults */
-
-    min-height: 100vh;
-    text-rendering: optimizeSpeed;
-    line-height: 1.5;
-
 }
 
 .header {
@@ -146,15 +139,17 @@ body {
 }
 
 
-img {
+/* img {
     width: 100%;
     height: auto;
-}
+} */
 
 .featured-albums img {
     width: 100%;
     height: auto;
 }
+
+
 
 .view-album-btn-container {
     margin-top: 21em;
@@ -306,63 +301,27 @@ p {
 /*===========================  New Product Layout (Search Page)  =========================== */
 
 
-
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-    text-decoration-skip-ink: auto;
+.stacked {
+    display: grid;
 }
 
-/* Make images easier to work with */
-img,
-picture {
-    max-width: 100%;
-    display: block;
+.stacked> * {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
 }
 
-/* Inherit fonts for inputs and buttons */
-input,
-button,
-textarea,
-select {
-    font: inherit;
-}
-
-/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
-@media (prefers-reduced-motion: reduce) {
-    html:focus-within {
-        scroll-behavior: auto;
-    }
-
-    *,
-    *::before,
-    *::after {
-        animation-duration: 0.01ms;
-        animation-iteration-count: 1;
-        transition-duration: 0.01ms;
-        scroll-behavior: auto;
-    }
-}
-
-
-.container {
+.prod-container {
     max-width: 100rem;
     margin-inline: auto;
     padding-inline: 2rem;
 }
 
-.stacked {
-    display: grid;
-}
-
-.stacked>* {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-}
-
 .product-grid {
     display: grid;
-    gap: 0.125rem;
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    gap: .125rem;
+    grid-template-columns:
+        repeat(auto-fit, minmax(15rem, 1fr))
+        /* Giving the cards a minimum and maximum size for responsiveness */
 }
 
 .card {
@@ -373,20 +332,27 @@ select {
 .card__content {
     background: white;
     align-self: end;
-    margin: 0.5rem 0.5rem 2rem;
-    padding: 0.5rem;
-    box-shadow: 0 0.25rem 1rem rgb(0 0 0 / 0.1);
+    margin: .5rem .5rem 2rem;
+    padding: .5rem;
+    box-shadow: 0 0.25rem 1rem rgb(0 0 0 / .1);
 }
 
+
 .card__title {
-    font-size: 1.25rem;
+    font-size: 1rem;
     line-height: 1.1;
-    color: firebrick;
+    color: var(--colour-text);
 }
 
 .card__price {
-    font-size: 1.75rem;
+    color: var(--colour-tertiary);
+    font-size: 1.25rem;
 }
+
+a.card__img {
+    background-color: red;
+}
+
 
 .card__img {
     width: 100%;
@@ -394,7 +360,8 @@ select {
     object-fit: cover;
 }
 
-@media (min-width: 60em) {
+@media(min-width: 40em) {
+
     .card__img {
         aspect-ratio: 1 / 1;
     }
@@ -404,35 +371,66 @@ select {
         grid-column: span 2;
     }
 
+
     .card.featured .card__img {
         aspect-ratio: 1 / 1.25;
     }
+
 
     .card.featured .card__title {
         font-size: 1.75rem;
     }
 }
 
-.main-title {
-    font-size: clamp(2rem, 5vw + 1rem, 5rem);
-    line-height: 1;
-    color: white;
-    background: linear-gradient(-45deg, blue, red);
-    padding: 0.125em 0.5em;
-    margin-bottom: 1em;
-
-    width: fit-content;
-}
-
-p.max-content {
-    width: max-content;
-}
-
-p.min-content {
-    width: min-content;
-}
-
-
+/* .prod-container {
+    max-width: 100rem;
+    margin-inline: auto;
+    padding-inline: 2rem;
+  }
+  
+  .stacked {
+    display: grid;
+  }
+  
+  .stacked > * {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+  
+  .product-grid {
+    display: grid;
+    gap: 0.125rem;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  }
+  
+  .card {
+    aspect-ratio: 1 / 1.5;
+    /* border: 3px solid hotpink;
+  }
+  
+  .card__content {
+    background: white;
+    align-self: end;
+    margin: 0.5rem 0.5rem 2rem;
+    padding: 0.5rem;
+    box-shadow: 0 0.25rem 1rem rgb(0 0 0 / 0.1);
+  }
+  
+  .card__title {
+    font-size: 1.25rem;
+    line-height: 1.1;
+    color: firebrick;
+  }
+  
+  .card__price {
+    font-size: 1.75rem;
+  }
+  
+  .card__img {
+    width: 100%;
+    aspect-ratio: 1 / 1.25;
+    object-fit: cover;
+  } */
 
 
 /*================== END New Product Layout (Search Page)  END ==================*/
@@ -573,16 +571,6 @@ footer::after {
     opacity: 1;
     transition: opacity 250ms ease-in-out 250ms;
 }
-
-@media screen and (max-width: 800px) {
-    .logo img {
-        width: 30%;
-        height: 10%;
-        margin-left: 35%;
-
-    }
-}
-
 
 
 @media screen and (min-width: 800px) {
@@ -730,8 +718,6 @@ footer::after {
 
 
 /* Form fills: Styling the text input */
-
-
 
 input,
 textarea,
@@ -1105,6 +1091,33 @@ label {
 }
 
 
+
+
+
+
+
+@media (min-width: 10rem) {
+    h1 {
+        font-size: 2.5 rem;
+    }
+
+    .home-about-textbox h1 {
+        top: .4em;
+        padding: 0 .325em;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
 @media (min-width: 60rem) {
     .home-hero {
         height: 100vh;
@@ -1114,6 +1127,7 @@ label {
 }
 
 .home-about-textbox {
+    margin: 7em 0em 0em 0em;
     background-color: var(--colour-secondary);
     padding: 3em;
     width: 100vw;
@@ -1122,7 +1136,6 @@ label {
     outline-offset: -1.5em;
     color: var(--colour-text);
     position: relative;
-    margin-top: 7em;
 }
 
 .home-about-textbox h1 {
@@ -1144,6 +1157,11 @@ label {
         top: .4em;
         padding: 0 .325em;
     }
+
+    .btn-hero {
+        margin: 4em 3em 3em 3em;
+    }
+
 }
 
 
@@ -1245,6 +1263,8 @@ label {
     padding: 5em 0;
 }
 
+
+
 /* ============================== Footer ====================================*/
 
 footer {
@@ -1313,7 +1333,7 @@ footer a {
 /* ============================== *END* Footer *END*====================================*/
 
 
-/* 
+
 .card {
     background-color: white;
     border: 1px solid #333;
@@ -1404,4 +1424,4 @@ footer a {
     border-width: 2px;
     border-style: solid;
     padding: .5em 1.75em;
-} */
+}
